kubectlコマンドをインストールする手順を変更

--- a/手順.md
+++ b/手順.md
@@ -24,10 +24,10 @@ az deployment group create --resource-group myResourceGroup --template-file main
 az aks install-cli
 ```
 
-mac osでインストールする場合
+mac osでインストールする場合は下記の手順を参考
 
 [参考]
-https://learn.microsoft.com/ja-jp/cli/azure/install-azure-cli-macos
+https://kubernetes.io/docs/tasks/tools/install-kubectl-macos/#install-with-homebrew-on-macos
 
 ## Kubernetes クラスターに接続するように kubectl を構成します。 
 ```bash
